cambio nombre kenyi

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     </div>
 
 
-                    <div class="col-md-2"><img class="img-rounded"src="images/contact/Kenyi.jpg"; style= "width:195px; height:200px;">
+                    <div class="col-md-2"><img class="img-rounded"src="images/contact/kenyi.jpg"; style= "width:195px; height:200px;">
                     </div>
                     <div class="col-md-2"><h4>Kenyi Cansino</h4>
                         <p>Peruvian economist and MPA/ID candidate, focused on fiscal policy with experience in economic, social, and environmental policy design.</p>
